--- a/QKDB92.ipynb
+++ b/QKDB92.ipynb
@@ -50,45 +50,45 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Key gerada:       [1, 1, 0, 1, 0, 0, 0, 1, 0, 1]\n",
+      "Key gerada:       [0, 1, 1, 1, 1, 0, 0, 1, 1, 0]\n",
+      "Shared Key:       [1, 0]\n",
+      "Bits diferentes:  8\n",
+      "\n",
+      "Key gerada:       [0, 0, 0, 0, 1, 1, 1, 1, 1, 0]\n",
+      "Shared Key:       [1]\n",
+      "Bits diferentes:  9\n",
+      "\n",
+      "Key gerada:       [0, 1, 1, 0, 0, 0, 1, 1, 1, 0]\n",
       "Shared Key:       [0]\n",
       "Bits diferentes:  9\n",
       "\n",
-      "Key gerada:       [1, 1, 0, 0, 1, 1, 0, 1, 1, 0]\n",
-      "Shared Key:       [1, 0, 0, 1, 1, 0]\n",
-      "Bits diferentes:  4\n",
+      "Key gerada:       [1, 1, 0, 1, 0, 1, 0, 0, 1, 0]\n",
+      "Shared Key:       [1]\n",
+      "Bits diferentes:  9\n",
       "\n",
-      "Key gerada:       [1, 1, 0, 1, 0, 0, 0, 0, 1, 1]\n",
-      "Shared Key:       []\n",
-      "Bits diferentes:  10\n",
-      "\n",
-      "Key gerada:       [1, 0, 1, 0, 0, 1, 1, 1, 0, 1]\n",
+      "Key gerada:       [1, 1, 0, 1, 0, 0, 0, 1, 0, 0]\n",
       "Shared Key:       [1, 1]\n",
       "Bits diferentes:  8\n",
       "\n",
-      "Key gerada:       [0, 1, 0, 1, 0, 1, 1, 1, 1, 1]\n",
-      "Shared Key:       [0, 1, 0, 1]\n",
-      "Bits diferentes:  6\n",
+      "Key gerada:       [0, 0, 1, 0, 0, 0, 0, 1, 0, 0]\n",
+      "Shared Key:       [0, 1]\n",
+      "Bits diferentes:  8\n",
       "\n",
-      "Key gerada:       [1, 1, 1, 1, 0, 1, 0, 0, 0, 1]\n",
-      "Shared Key:       [1]\n",
-      "Bits diferentes:  9\n",
-      "\n",
-      "Key gerada:       [0, 1, 0, 1, 0, 0, 0, 0, 0, 0]\n",
-      "Shared Key:       [0, 1, 0]\n",
-      "Bits diferentes:  7\n",
-      "\n",
-      "Key gerada:       [1, 1, 1, 1, 0, 0, 1, 1, 1, 1]\n",
+      "Key gerada:       [0, 1, 1, 0, 1, 1, 0, 0, 0, 0]\n",
       "Shared Key:       []\n",
       "Bits diferentes:  10\n",
       "\n",
-      "Key gerada:       [1, 1, 1, 0, 1, 0, 0, 1, 1, 0]\n",
-      "Shared Key:       [1]\n",
-      "Bits diferentes:  9\n",
+      "Key gerada:       [0, 0, 0, 1, 1, 1, 1, 0, 0, 0]\n",
+      "Shared Key:       [0, 0]\n",
+      "Bits diferentes:  8\n",
       "\n",
-      "Key gerada:       [1, 0, 1, 1, 0, 1, 0, 0, 0, 0]\n",
+      "Key gerada:       [1, 1, 1, 1, 1, 0, 1, 0, 0, 0]\n",
       "Shared Key:       [1, 0, 0]\n",
-      "Bits diferentes:  7\n"
+      "Bits diferentes:  7\n",
+      "\n",
+      "Key gerada:       [0, 1, 0, 0, 0, 1, 0, 0, 1, 1]\n",
+      "Shared Key:       []\n",
+      "Bits diferentes:  10\n"
      ]
     }
    ],
