Add interferência em send qubit
Add check_key também.

--- a/QKDB92.ipynb
+++ b/QKDB92.ipynb
@@ -9,17 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "from components import Network, Controller\n",
-    "from components.qkd.b92 import create_key, generate_bases, prepara_qubits_b92, apply_measurement_b92"
+    "from components.qkd.b92 import create_key, generate_bases, prepara_qubits_b92, apply_measurement_b92, check_key"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -50,45 +50,55 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Key gerada:       [0, 1, 1, 1, 1, 0, 0, 1, 1, 0]\n",
-      "Shared Key:       [1, 0]\n",
-      "Bits diferentes:  8\n",
+      "Key gerada:       [0, 0, 1, 0, 1, 0, 0, 0, 0, 1]\n",
+      "Shared Key:       [0, 1, 1]\n",
+      "Bits diferentes:  0\n",
+      "Key sucess:       0.3\n",
       "\n",
-      "Key gerada:       [0, 0, 0, 0, 1, 1, 1, 1, 1, 0]\n",
-      "Shared Key:       [1]\n",
-      "Bits diferentes:  9\n",
+      "Key gerada:       [0, 0, 1, 1, 1, 0, 0, 0, 0, 1]\n",
+      "Shared Key:       []\n",
+      "Bits diferentes:  0\n",
+      "Key sucess:       0.0\n",
       "\n",
-      "Key gerada:       [0, 1, 1, 0, 0, 0, 1, 1, 1, 0]\n",
+      "Key gerada:       [0, 1, 0, 1, 1, 0, 1, 0, 0, 0]\n",
+      "Shared Key:       [1, 1, 1]\n",
+      "Bits diferentes:  0\n",
+      "Key sucess:       0.3\n",
+      "\n",
+      "Key gerada:       [0, 1, 0, 0, 0, 1, 1, 0, 0, 1]\n",
       "Shared Key:       [0]\n",
-      "Bits diferentes:  9\n",
+      "Bits diferentes:  0\n",
+      "Key sucess:       0.1\n",
       "\n",
-      "Key gerada:       [1, 1, 0, 1, 0, 1, 0, 0, 1, 0]\n",
-      "Shared Key:       [1]\n",
-      "Bits diferentes:  9\n",
-      "\n",
-      "Key gerada:       [1, 1, 0, 1, 0, 0, 0, 1, 0, 0]\n",
-      "Shared Key:       [1, 1]\n",
-      "Bits diferentes:  8\n",
-      "\n",
-      "Key gerada:       [0, 0, 1, 0, 0, 0, 0, 1, 0, 0]\n",
-      "Shared Key:       [0, 1]\n",
-      "Bits diferentes:  8\n",
-      "\n",
-      "Key gerada:       [0, 1, 1, 0, 1, 1, 0, 0, 0, 0]\n",
-      "Shared Key:       []\n",
-      "Bits diferentes:  10\n",
-      "\n",
-      "Key gerada:       [0, 0, 0, 1, 1, 1, 1, 0, 0, 0]\n",
+      "Key gerada:       [0, 0, 0, 1, 1, 1, 1, 1, 1, 1]\n",
       "Shared Key:       [0, 0]\n",
-      "Bits diferentes:  8\n",
+      "Bits diferentes:  0\n",
+      "Key sucess:       0.2\n",
       "\n",
-      "Key gerada:       [1, 1, 1, 1, 1, 0, 1, 0, 0, 0]\n",
-      "Shared Key:       [1, 0, 0]\n",
-      "Bits diferentes:  7\n",
-      "\n",
-      "Key gerada:       [0, 1, 0, 0, 0, 1, 0, 0, 1, 1]\n",
+      "Key gerada:       [1, 0, 1, 1, 0, 0, 1, 0, 0, 1]\n",
       "Shared Key:       []\n",
-      "Bits diferentes:  10\n"
+      "Bits diferentes:  0\n",
+      "Key sucess:       0.0\n",
+      "\n",
+      "Key gerada:       [0, 1, 1, 0, 0, 1, 0, 1, 1, 1]\n",
+      "Shared Key:       [1, 0, 1, 0, 1, 1]\n",
+      "Bits diferentes:  0\n",
+      "Key sucess:       0.6\n",
+      "\n",
+      "Key gerada:       [1, 0, 0, 0, 1, 1, 1, 0, 1, 1]\n",
+      "Shared Key:       [1, 1]\n",
+      "Bits diferentes:  0\n",
+      "Key sucess:       0.2\n",
+      "\n",
+      "Key gerada:       [0, 0, 1, 0, 0, 1, 1, 0, 1, 1]\n",
+      "Shared Key:       [0, 1]\n",
+      "Bits diferentes:  0\n",
+      "Key sucess:       0.2\n",
+      "\n",
+      "Key gerada:       [1, 0, 0, 0, 0, 0, 0, 0, 0, 1]\n",
+      "Shared Key:       [1]\n",
+      "Bits diferentes:  0\n",
+      "Key sucess:       0.1\n"
      ]
     }
    ],
@@ -109,15 +119,22 @@
     "    \n",
     "    # Calculando a rota\n",
     "    route = controlador.calculate_route(alice, bob)\n",
+    "    \n",
+    "    # Enviando os qubits\n",
+    "    bob_received_qubits, interference_qubits = rede.send_qubits(route, qubits)\n",
     "        \n",
     "    # Bob mede os qubits\n",
-    "    measured_qubits = apply_measurement_b92(qubits, bases_bob)\n",
+    "    measured_qubits = apply_measurement_b92(bob_received_qubits, bases_bob)\n",
     "    \n",
+    "    # Qubits sem interferência\n",
+    "    shared_key = check_key(measured_qubits, interference_qubits)\n",
+    "\n",
     "    # Print the results\n",
     "    results = f\"\"\"\n",
     "Key gerada:       {key_alice}\n",
-    "Shared Key:       {measured_qubits}\n",
-    "Bits diferentes:  {len(key_alice) - len(measured_qubits)}\"\"\"\n",
+    "Shared Key:       {shared_key}\n",
+    "Bits diferentes:  {len(key_alice) - len(measured_qubits)}\n",
+    "Key sucess:       {len(shared_key) / key_size}\"\"\"\n",
     "    \n",
     "    print(results)"
    ]
@@ -139,7 +156,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
