--- a/QKDBB84.ipynb
+++ b/QKDBB84.ipynb
@@ -50,65 +50,65 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Key gerada:      [1, 0, 1, 1, 1, 1, 1, 1, 0, 1]\n",
-      "Shared Key:      [1, 1, 1, 1]\n",
-      "Bases Alice:     [0, 0, 0, 0, 0, 1, 1, 0, 1, 0]\n",
-      "Bases Bob:       [1, 1, 1, 0, 0, 1, 1, 1, 0, 1]\n",
-      "Bits diferentes: 6\n",
+      "Key gerada:      [1, 1, 0, 0, 1, 0, 0, 1, 0, 1]\n",
+      "Shared Key:      [0, 1, 0, 1, 1]\n",
+      "Bases Alice:     [0, 1, 0, 0, 1, 0, 1, 0, 1, 0]\n",
+      "Bases Bob:       [1, 0, 0, 1, 1, 0, 0, 0, 0, 0]\n",
+      "Bits diferentes: 5\n",
       "\n",
-      "Key gerada:      [0, 1, 0, 1, 0, 1, 0, 0, 1, 1]\n",
-      "Shared Key:      [0, 1, 1, 0, 0, 1]\n",
-      "Bases Alice:     [1, 1, 0, 0, 1, 1, 1, 1, 0, 0]\n",
-      "Bases Bob:       [1, 1, 1, 0, 1, 0, 0, 1, 0, 1]\n",
+      "Key gerada:      [1, 1, 1, 1, 1, 1, 1, 1, 0, 1]\n",
+      "Shared Key:      [1, 1, 1]\n",
+      "Bases Alice:     [1, 0, 1, 0, 1, 1, 1, 1, 1, 0]\n",
+      "Bases Bob:       [0, 1, 1, 1, 0, 1, 0, 0, 0, 0]\n",
+      "Bits diferentes: 7\n",
+      "\n",
+      "Key gerada:      [1, 1, 1, 1, 1, 1, 1, 0, 0, 0]\n",
+      "Shared Key:      [1, 1, 1, 1, 0, 0]\n",
+      "Bases Alice:     [1, 0, 1, 1, 1, 1, 1, 0, 1, 1]\n",
+      "Bases Bob:       [1, 0, 0, 0, 1, 1, 0, 1, 1, 1]\n",
       "Bits diferentes: 4\n",
       "\n",
-      "Key gerada:      [1, 0, 0, 0, 1, 1, 0, 0, 1, 0]\n",
-      "Shared Key:      [0, 0, 1, 0, 1]\n",
-      "Bases Alice:     [0, 0, 1, 1, 1, 0, 0, 1, 1, 1]\n",
-      "Bases Bob:       [1, 0, 1, 0, 0, 0, 1, 1, 1, 0]\n",
-      "Bits diferentes: 5\n",
-      "\n",
-      "Key gerada:      [1, 0, 0, 1, 1, 1, 0, 0, 1, 0]\n",
-      "Shared Key:      [1, 0, 0, 1, 1, 0, 1]\n",
-      "Bases Alice:     [1, 1, 0, 1, 1, 1, 0, 0, 0, 1]\n",
-      "Bases Bob:       [1, 1, 0, 0, 1, 1, 1, 0, 0, 0]\n",
-      "Bits diferentes: 3\n",
-      "\n",
-      "Key gerada:      [1, 1, 0, 1, 1, 1, 1, 1, 0, 1]\n",
-      "Shared Key:      [1, 1, 0, 1]\n",
-      "Bases Alice:     [1, 0, 1, 0, 1, 0, 1, 1, 1, 1]\n",
-      "Bases Bob:       [1, 0, 1, 1, 0, 1, 0, 0, 0, 1]\n",
+      "Key gerada:      [1, 0, 1, 0, 1, 1, 1, 0, 0, 0]\n",
+      "Shared Key:      [1, 0, 1, 1]\n",
+      "Bases Alice:     [0, 1, 1, 0, 0, 0, 1, 1, 0, 0]\n",
+      "Bases Bob:       [0, 1, 1, 1, 0, 1, 0, 0, 1, 1]\n",
       "Bits diferentes: 6\n",
       "\n",
-      "Key gerada:      [1, 0, 0, 1, 0, 0, 1, 1, 1, 1]\n",
-      "Shared Key:      [0, 0, 1]\n",
-      "Bases Alice:     [0, 0, 1, 0, 0, 1, 1, 1, 1, 0]\n",
-      "Bases Bob:       [1, 0, 0, 1, 0, 0, 1, 0, 0, 1]\n",
-      "Bits diferentes: 7\n",
-      "\n",
-      "Key gerada:      [0, 1, 0, 0, 1, 0, 1, 1, 1, 1]\n",
-      "Shared Key:      [0, 1, 0, 0, 0, 1, 1]\n",
-      "Bases Alice:     [0, 1, 0, 1, 1, 0, 1, 1, 1, 0]\n",
-      "Bases Bob:       [0, 1, 0, 1, 0, 0, 0, 1, 1, 1]\n",
-      "Bits diferentes: 3\n",
-      "\n",
-      "Key gerada:      [0, 0, 1, 1, 1, 1, 0, 1, 1, 1]\n",
-      "Shared Key:      [1, 1, 0, 1, 1]\n",
-      "Bases Alice:     [1, 1, 0, 0, 0, 0, 0, 0, 1, 1]\n",
-      "Bases Bob:       [0, 0, 1, 0, 1, 0, 0, 0, 1, 0]\n",
+      "Key gerada:      [0, 1, 1, 0, 1, 1, 1, 0, 1, 1]\n",
+      "Shared Key:      [1, 0, 1, 1, 1]\n",
+      "Bases Alice:     [0, 1, 0, 1, 0, 0, 1, 0, 1, 0]\n",
+      "Bases Bob:       [1, 1, 1, 1, 1, 0, 1, 1, 0, 0]\n",
       "Bits diferentes: 5\n",
       "\n",
-      "Key gerada:      [1, 0, 0, 1, 1, 1, 1, 0, 0, 0]\n",
-      "Shared Key:      [0, 1, 1]\n",
-      "Bases Alice:     [1, 1, 1, 0, 1, 0, 0, 1, 1, 0]\n",
-      "Bases Bob:       [0, 1, 0, 0, 0, 0, 1, 0, 0, 1]\n",
+      "Key gerada:      [1, 0, 0, 1, 1, 1, 1, 1, 0, 1]\n",
+      "Shared Key:      [1, 1, 1, 1, 0]\n",
+      "Bases Alice:     [1, 0, 0, 1, 1, 1, 0, 0, 1, 1]\n",
+      "Bases Bob:       [0, 1, 1, 1, 1, 1, 0, 1, 1, 0]\n",
+      "Bits diferentes: 5\n",
+      "\n",
+      "Key gerada:      [0, 1, 0, 0, 0, 1, 0, 0, 1, 0]\n",
+      "Shared Key:      [0, 0, 0, 0, 0, 0, 1, 0]\n",
+      "Bases Alice:     [0, 1, 1, 1, 0, 0, 1, 1, 1, 0]\n",
+      "Bases Bob:       [0, 0, 1, 1, 0, 1, 1, 1, 1, 0]\n",
+      "Bits diferentes: 2\n",
+      "\n",
+      "Key gerada:      [0, 0, 0, 1, 1, 0, 0, 1, 0, 0]\n",
+      "Shared Key:      [0, 0]\n",
+      "Bases Alice:     [1, 0, 1, 0, 0, 0, 1, 1, 1, 0]\n",
+      "Bases Bob:       [0, 1, 0, 1, 1, 1, 0, 0, 1, 0]\n",
+      "Bits diferentes: 8\n",
+      "\n",
+      "Key gerada:      [1, 1, 1, 1, 0, 0, 0, 1, 0, 0]\n",
+      "Shared Key:      [1, 0, 0]\n",
+      "Bases Alice:     [0, 1, 1, 1, 1, 0, 0, 0, 1, 1]\n",
+      "Bases Bob:       [1, 1, 0, 0, 0, 1, 0, 1, 1, 0]\n",
       "Bits diferentes: 7\n",
       "\n",
-      "Key gerada:      [1, 0, 1, 1, 0, 1, 0, 1, 1, 0]\n",
-      "Shared Key:      [1, 0, 1, 1, 0]\n",
-      "Bases Alice:     [0, 1, 0, 1, 0, 1, 0, 0, 0, 0]\n",
-      "Bases Bob:       [0, 1, 1, 1, 1, 0, 1, 1, 0, 0]\n",
-      "Bits diferentes: 5\n"
+      "Key gerada:      [0, 1, 1, 0, 0, 1, 0, 1, 1, 1]\n",
+      "Shared Key:      [1, 0, 1]\n",
+      "Bases Alice:     [1, 0, 0, 1, 0, 0, 0, 0, 1, 1]\n",
+      "Bases Bob:       [0, 1, 0, 1, 1, 0, 1, 1, 0, 0]\n",
+      "Bits diferentes: 7\n"
      ]
     }
    ],
@@ -169,7 +169,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
