--- a/QKDE91.ipynb
+++ b/QKDE91.ipynb
@@ -14,7 +14,7 @@
    "outputs": [],
    "source": [
     "from components import Network, Controller\n",
-    "from components.qkd.e91 import create_key, generate_bases, prepara_qubits_e91, aplly_bases_in_measurement_e91, compare_bases, get_key"
+    "from components.qkd.e91 import create_key, generate_bases, prepara_qubits_e91, aplly_bases_in_measurement_e91, compare_bases, get_key, check_key"
    ]
   },
   {
@@ -50,75 +50,105 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Key gerada:      [0, 1, 0, 1, 0, 0, 1, 0, 0, 0]\n",
-      "Shared Key:      [0, 0, 1, 0]\n",
-      "Bases Alice:     [0, 1, 0, 1, 1, 1, 0, 1, 1, 0]\n",
-      "Bases Bob:       [1, 0, 0, 0, 0, 1, 0, 1, 0, 1]\n",
-      "Bits diferentes: 6\n",
-      "Sucesso:         [0, 0, 0, 1, 0, 0, 1, 0, 0, 0]\n",
+      "Base de Alice:          [0, 1, 0, 0, 1, 0, 0, 1, 1, 1]\n",
+      "Base de Bob:            [0, 0, 0, 1, 1, 0, 0, 1, 0, 1]\n",
+      "Chave gerada:           [1, 0, 0, 0, 0, 1, 0, 0, 1, 0]\n",
+      "Chave recebida:         [1, None, 0, None, 0, 1, 0, 0, None, 0]\n",
+      "Qubits interferidos:    {3}\n",
+      "Chave final:            [1, 0, 0, 1, 0, 0, 0]\n",
+      "Bits diferentes:        3\n",
+      "Key sucess:             0.7\n",
       "\n",
-      "Key gerada:      [1, 0, 0, 0, 1, 0, 1, 1, 1, 1]\n",
-      "Shared Key:      [1, 0, 0]\n",
-      "Bases Alice:     [0, 0, 1, 1, 0, 0, 1, 1, 0, 0]\n",
-      "Bases Bob:       [0, 1, 0, 1, 1, 0, 0, 0, 1, 1]\n",
-      "Bits diferentes: 7\n",
-      "Sucesso:         [1, 0, 1, 0, 1, 0, 1, 1, 0, 0]\n",
       "\n",
-      "Key gerada:      [0, 1, 0, 0, 1, 1, 0, 1, 0, 0]\n",
-      "Shared Key:      [1, 0, 1]\n",
-      "Bases Alice:     [0, 1, 0, 0, 0, 0, 1, 0, 0, 0]\n",
-      "Bases Bob:       [1, 0, 1, 1, 1, 0, 1, 0, 1, 1]\n",
-      "Bits diferentes: 7\n",
-      "Sucesso:         [1, 0, 0, 0, 0, 1, 0, 1, 1, 0]\n",
+      "Base de Alice:          [1, 0, 0, 0, 1, 0, 1, 1, 1, 1]\n",
+      "Base de Bob:            [1, 0, 1, 0, 1, 1, 0, 1, 0, 1]\n",
+      "Chave gerada:           [1, 0, 0, 0, 0, 0, 1, 0, 1, 1]\n",
+      "Chave recebida:         [1, 0, None, 0, 0, None, None, 0, None, 0]\n",
+      "Qubits interferidos:    {9, 5}\n",
+      "Chave final:            [1, 0, 0, 0, 0]\n",
+      "Bits diferentes:        5\n",
+      "Key sucess:             0.5\n",
       "\n",
-      "Key gerada:      [0, 1, 1, 0, 0, 0, 0, 0, 0, 0]\n",
-      "Shared Key:      [0, 0, 0]\n",
-      "Bases Alice:     [1, 1, 1, 1, 0, 0, 1, 0, 1, 0]\n",
-      "Bases Bob:       [1, 0, 0, 0, 1, 1, 1, 0, 0, 1]\n",
-      "Bits diferentes: 7\n",
-      "Sucesso:         [0, 0, 0, 1, 0, 0, 0, 0, 1, 1]\n",
       "\n",
-      "Key gerada:      [0, 1, 1, 0, 1, 0, 1, 0, 1, 0]\n",
-      "Shared Key:      [1, 1, 0, 0, 1, 0]\n",
-      "Bases Alice:     [0, 1, 1, 1, 1, 1, 1, 1, 0, 0]\n",
-      "Bases Bob:       [1, 1, 1, 1, 0, 1, 1, 0, 1, 0]\n",
-      "Bits diferentes: 4\n",
-      "Sucesso:         [1, 1, 1, 0, 1, 0, 1, 0, 0, 0]\n",
+      "Base de Alice:          [1, 0, 1, 0, 0, 1, 0, 0, 0, 1]\n",
+      "Base de Bob:            [0, 1, 1, 1, 0, 1, 1, 1, 1, 0]\n",
+      "Chave gerada:           [1, 0, 1, 1, 0, 1, 0, 1, 0, 0]\n",
+      "Chave recebida:         [None, None, 0, None, 0, 1, None, None, None, None]\n",
+      "Qubits interferidos:    {8, 9, 2}\n",
+      "Chave final:            [0, 1]\n",
+      "Bits diferentes:        8\n",
+      "Key sucess:             0.2\n",
       "\n",
-      "Key gerada:      [0, 1, 0, 0, 1, 1, 1, 0, 0, 1]\n",
-      "Shared Key:      [0, 0, 1]\n",
-      "Bases Alice:     [1, 0, 0, 0, 1, 0, 0, 1, 1, 1]\n",
-      "Bases Bob:       [1, 1, 0, 1, 1, 1, 1, 0, 0, 0]\n",
-      "Bits diferentes: 7\n",
-      "Sucesso:         [0, 0, 0, 1, 1, 1, 0, 0, 1, 0]\n",
       "\n",
-      "Key gerada:      [0, 0, 0, 1, 1, 1, 0, 0, 0, 0]\n",
-      "Shared Key:      [1, 1, 0, 0]\n",
-      "Bases Alice:     [0, 0, 0, 0, 1, 1, 1, 0, 1, 1]\n",
-      "Bases Bob:       [1, 1, 1, 1, 1, 1, 1, 1, 0, 1]\n",
-      "Bits diferentes: 6\n",
-      "Sucesso:         [1, 1, 0, 1, 1, 1, 0, 0, 1, 0]\n",
+      "Base de Alice:          [1, 1, 0, 0, 0, 0, 1, 1, 0, 0]\n",
+      "Base de Bob:            [0, 1, 0, 0, 0, 0, 1, 1, 1, 1]\n",
+      "Chave gerada:           [1, 0, 0, 0, 0, 1, 0, 0, 1, 0]\n",
+      "Chave recebida:         [None, 0, 0, 0, 1, 1, 0, 0, None, None]\n",
+      "Qubits interferidos:    {0, 4}\n",
+      "Chave final:            [0, 0, 0, 1, 0, 0]\n",
+      "Bits diferentes:        4\n",
+      "Key sucess:             0.6\n",
       "\n",
-      "Key gerada:      [0, 1, 0, 1, 1, 0, 1, 0, 1, 1]\n",
-      "Shared Key:      [1, 1, 1, 1]\n",
-      "Bases Alice:     [0, 1, 0, 0, 1, 1, 0, 0, 1, 1]\n",
-      "Bases Bob:       [1, 1, 1, 1, 1, 0, 0, 1, 0, 1]\n",
-      "Bits diferentes: 6\n",
-      "Sucesso:         [1, 1, 0, 0, 1, 0, 1, 1, 0, 1]\n",
       "\n",
-      "Key gerada:      [0, 0, 0, 0, 0, 0, 1, 1, 1, 1]\n",
-      "Shared Key:      [0]\n",
-      "Bases Alice:     [1, 1, 1, 0, 0, 1, 0, 0, 0, 1]\n",
-      "Bases Bob:       [0, 0, 0, 1, 1, 1, 1, 1, 1, 0]\n",
-      "Bits diferentes: 9\n",
-      "Sucesso:         [1, 0, 0, 1, 0, 0, 0, 1, 0, 1]\n",
+      "Base de Alice:          [1, 0, 1, 1, 0, 1, 0, 1, 0, 1]\n",
+      "Base de Bob:            [1, 0, 0, 0, 0, 1, 0, 0, 1, 0]\n",
+      "Chave gerada:           [1, 0, 1, 1, 0, 1, 1, 1, 0, 1]\n",
+      "Chave recebida:         [1, 1, None, None, 0, 1, 1, None, None, None]\n",
+      "Qubits interferidos:    {1, 9}\n",
+      "Chave final:            [1, 0, 1, 1]\n",
+      "Bits diferentes:        6\n",
+      "Key sucess:             0.4\n",
       "\n",
-      "Key gerada:      [1, 0, 0, 0, 1, 0, 1, 0, 0, 0]\n",
-      "Shared Key:      [0, 0, 0]\n",
-      "Bases Alice:     [0, 0, 0, 1, 0, 1, 1, 1, 0, 0]\n",
-      "Bases Bob:       [1, 0, 1, 1, 1, 0, 0, 1, 1, 1]\n",
-      "Bits diferentes: 7\n",
-      "Sucesso:         [0, 0, 0, 0, 0, 1, 0, 0, 1, 0]\n"
+      "\n",
+      "Base de Alice:          [1, 1, 1, 0, 0, 1, 1, 1, 1, 1]\n",
+      "Base de Bob:            [1, 0, 0, 0, 1, 1, 0, 0, 0, 1]\n",
+      "Chave gerada:           [0, 1, 1, 1, 0, 1, 1, 0, 0, 0]\n",
+      "Chave recebida:         [0, None, None, 1, None, 1, None, None, None, 1]\n",
+      "Qubits interferidos:    {9}\n",
+      "Chave final:            [0, 1, 1]\n",
+      "Bits diferentes:        7\n",
+      "Key sucess:             0.3\n",
+      "\n",
+      "\n",
+      "Base de Alice:          [0, 0, 1, 0, 0, 1, 0, 0, 1, 0]\n",
+      "Base de Bob:            [0, 0, 1, 0, 0, 1, 1, 1, 1, 1]\n",
+      "Chave gerada:           [0, 1, 0, 0, 0, 0, 1, 0, 1, 1]\n",
+      "Chave recebida:         [0, 1, 0, 0, 0, 0, None, None, 1, None]\n",
+      "Qubits interferidos:    set()\n",
+      "Chave final:            [0, 1, 0, 0, 0, 0, 1]\n",
+      "Bits diferentes:        3\n",
+      "Key sucess:             0.7\n",
+      "\n",
+      "\n",
+      "Base de Alice:          [0, 1, 1, 1, 1, 1, 0, 1, 1, 0]\n",
+      "Base de Bob:            [1, 1, 0, 0, 0, 1, 1, 0, 1, 1]\n",
+      "Chave gerada:           [1, 0, 0, 0, 1, 1, 1, 1, 0, 1]\n",
+      "Chave recebida:         [None, 0, None, None, None, 1, None, None, 0, None]\n",
+      "Qubits interferidos:    {2}\n",
+      "Chave final:            [0, 1, 0]\n",
+      "Bits diferentes:        7\n",
+      "Key sucess:             0.3\n",
+      "\n",
+      "\n",
+      "Base de Alice:          [0, 1, 0, 1, 1, 0, 1, 0, 0, 1]\n",
+      "Base de Bob:            [0, 0, 0, 0, 0, 0, 0, 0, 0, 1]\n",
+      "Chave gerada:           [0, 0, 1, 1, 0, 1, 1, 0, 0, 1]\n",
+      "Chave recebida:         [0, None, 1, None, None, 1, None, 0, 0, 1]\n",
+      "Qubits interferidos:    set()\n",
+      "Chave final:            [0, 1, 1, 0, 0, 1]\n",
+      "Bits diferentes:        4\n",
+      "Key sucess:             0.6\n",
+      "\n",
+      "\n",
+      "Base de Alice:          [0, 0, 0, 1, 0, 0, 1, 0, 0, 0]\n",
+      "Base de Bob:            [0, 0, 0, 1, 1, 0, 0, 1, 0, 1]\n",
+      "Chave gerada:           [1, 0, 0, 0, 0, 1, 0, 0, 0, 0]\n",
+      "Chave recebida:         [1, 1, 0, 0, None, 1, None, None, 0, None]\n",
+      "Qubits interferidos:    {1}\n",
+      "Chave final:            [1, 0, 0, 1, 0]\n",
+      "Bits diferentes:        5\n",
+      "Key sucess:             0.5\n",
+      "\n"
      ]
     }
    ],
@@ -139,24 +169,33 @@
     "    \n",
     "    # Calculando a rota\n",
     "    route = controlador.calculate_route(alice, bob)\n",
-    "      \n",
+    "    \n",
+    "    # Enviando os qubits\n",
+    "    received_qubits, interference_qubits = rede.send_eprs(route, pairs)\n",
+    "    \n",
     "    # Bob medindo os qubits\n",
-    "    measured_qubits = aplly_bases_in_measurement_e91(pairs, bases_bob)\n",
+    "    measured_qubits = aplly_bases_in_measurement_e91(received_qubits, bases_bob)\n",
     "    \n",
     "    # Comparando as bases de Alice e Bob\n",
     "    matching_bases = compare_bases(bases_alice, bases_bob)\n",
     "    \n",
     "    # Chave obtida de acordo com as bases\n",
-    "    generated_shared_key = get_key(measured_qubits, matching_bases)\n",
+    "    key_bob = get_key(measured_qubits, matching_bases)\n",
+    "    \n",
+    "    # Checando chave\n",
+    "    shared_key = check_key(key_bob, key_alice)\n",
     "    \n",
     "    # Print the results\n",
     "    results = f\"\"\"\n",
-    "Key gerada:      {key_alice}\n",
-    "Shared Key:      {generated_shared_key}\n",
-    "Bases Alice:     {bases_alice}\n",
-    "Bases Bob:       {bases_bob}\n",
-    "Bits diferentes: {len(key_alice) - len(generated_shared_key)}\n",
-    "Sucesso:         {measured_qubits}\"\"\"\n",
+    "Base de Alice:          {bases_alice}\n",
+    "Base de Bob:            {bases_bob}\n",
+    "Chave gerada:           {key_alice}\n",
+    "Chave recebida:         {key_bob}\n",
+    "Qubits interferidos:    {interference_qubits}\n",
+    "Chave final:            {shared_key}\n",
+    "Bits diferentes:        {len(key_alice) - len(shared_key)}\n",
+    "Key sucess:             {len(shared_key) / key_size}\n",
+    "\"\"\"\n",
     "    \n",
     "    print(results)"
    ]
