--- a/QKDB92.ipynb
+++ b/QKDB92.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -50,55 +50,85 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Key gerada:       [0, 0, 1, 0, 1, 0, 0, 0, 0, 1]\n",
-      "Shared Key:       [0, 1, 1]\n",
-      "Bits diferentes:  0\n",
-      "Key sucess:       0.3\n",
+      "Chave gerada:           [1, 0, 0, 0, 1, 1, 1, 0, 1, 0]\n",
+      "Chave recebida:         [0, 1, None, None, 1, None, 0, None, 1, 1]\n",
+      "Qubits interferidos:    {0, 1, 2, 5, 6, 7, 9}\n",
+      "Chave final:            [1, 1]\n",
+      "Bits diferentes:        8\n",
+      "Key sucess:             0.2\n",
       "\n",
-      "Key gerada:       [0, 0, 1, 1, 1, 0, 0, 0, 0, 1]\n",
-      "Shared Key:       []\n",
-      "Bits diferentes:  0\n",
-      "Key sucess:       0.0\n",
       "\n",
-      "Key gerada:       [0, 1, 0, 1, 1, 0, 1, 0, 0, 0]\n",
-      "Shared Key:       [1, 1, 1]\n",
-      "Bits diferentes:  0\n",
-      "Key sucess:       0.3\n",
+      "Chave gerada:           [0, 1, 1, 0, 1, 0, 0, 1, 1, 1]\n",
+      "Chave recebida:         [None, None, 0, None, None, 1, None, 1, 1, 0]\n",
+      "Qubits interferidos:    {0, 2, 3, 4, 5, 9}\n",
+      "Chave final:            [1, 1]\n",
+      "Bits diferentes:        8\n",
+      "Key sucess:             0.2\n",
       "\n",
-      "Key gerada:       [0, 1, 0, 0, 0, 1, 1, 0, 0, 1]\n",
-      "Shared Key:       [0]\n",
-      "Bits diferentes:  0\n",
-      "Key sucess:       0.1\n",
       "\n",
-      "Key gerada:       [0, 0, 0, 1, 1, 1, 1, 1, 1, 1]\n",
-      "Shared Key:       [0, 0]\n",
-      "Bits diferentes:  0\n",
-      "Key sucess:       0.2\n",
+      "Chave gerada:           [0, 0, 0, 1, 0, 0, 1, 1, 1, 1]\n",
+      "Chave recebida:         [None, 1, 0, 0, 1, None, None, 0, None, 1]\n",
+      "Qubits interferidos:    {1, 2, 3, 4, 5, 6, 7, 9}\n",
+      "Chave final:            [0, 1]\n",
+      "Bits diferentes:        8\n",
+      "Key sucess:             0.2\n",
       "\n",
-      "Key gerada:       [1, 0, 1, 1, 0, 0, 1, 0, 0, 1]\n",
-      "Shared Key:       []\n",
-      "Bits diferentes:  0\n",
-      "Key sucess:       0.0\n",
       "\n",
-      "Key gerada:       [0, 1, 1, 0, 0, 1, 0, 1, 1, 1]\n",
-      "Shared Key:       [1, 0, 1, 0, 1, 1]\n",
-      "Bits diferentes:  0\n",
-      "Key sucess:       0.6\n",
+      "Chave gerada:           [1, 0, 0, 1, 1, 0, 0, 0, 1, 1]\n",
+      "Chave recebida:         [0, 1, None, None, None, 0, 0, None, None, 0]\n",
+      "Qubits interferidos:    {0, 1, 2, 3, 4, 5, 6, 7, 8, 9}\n",
+      "Chave final:            [0, 0]\n",
+      "Bits diferentes:        8\n",
+      "Key sucess:             0.2\n",
       "\n",
-      "Key gerada:       [1, 0, 0, 0, 1, 1, 1, 0, 1, 1]\n",
-      "Shared Key:       [1, 1]\n",
-      "Bits diferentes:  0\n",
-      "Key sucess:       0.2\n",
       "\n",
-      "Key gerada:       [0, 0, 1, 0, 0, 1, 1, 0, 1, 1]\n",
-      "Shared Key:       [0, 1]\n",
-      "Bits diferentes:  0\n",
-      "Key sucess:       0.2\n",
+      "Chave gerada:           [1, 0, 0, 0, 0, 0, 0, 0, 1, 1]\n",
+      "Chave recebida:         [None, 1, 1, 0, None, 1, None, None, 1, 1]\n",
+      "Qubits interferidos:    {0, 1, 2, 3, 4, 5, 6, 7, 8}\n",
+      "Chave final:            [0, 1, 1]\n",
+      "Bits diferentes:        7\n",
+      "Key sucess:             0.3\n",
       "\n",
-      "Key gerada:       [1, 0, 0, 0, 0, 0, 0, 0, 0, 1]\n",
-      "Shared Key:       [1]\n",
-      "Bits diferentes:  0\n",
-      "Key sucess:       0.1\n"
+      "\n",
+      "Chave gerada:           [1, 0, 0, 1, 0, 0, 0, 1, 0, 0]\n",
+      "Chave recebida:         [1, None, 1, None, 1, None, 1, 0, None, 0]\n",
+      "Qubits interferidos:    {1, 2, 3, 4, 5, 6, 7, 8, 9}\n",
+      "Chave final:            [1, 0]\n",
+      "Bits diferentes:        8\n",
+      "Key sucess:             0.2\n",
+      "\n",
+      "\n",
+      "Chave gerada:           [0, 0, 0, 1, 0, 1, 0, 0, 0, 0]\n",
+      "Chave recebida:         [None, 1, 1, 0, None, None, None, 0, None, None]\n",
+      "Qubits interferidos:    {0, 1, 2, 3, 4, 5, 6, 7, 8, 9}\n",
+      "Chave final:            [0]\n",
+      "Bits diferentes:        9\n",
+      "Key sucess:             0.1\n",
+      "\n",
+      "\n",
+      "Chave gerada:           [0, 1, 0, 1, 0, 0, 1, 0, 1, 0]\n",
+      "Chave recebida:         [None, None, 1, None, 0, None, None, None, None, None]\n",
+      "Qubits interferidos:    {0, 2, 4, 5, 7, 8}\n",
+      "Chave final:            [0]\n",
+      "Bits diferentes:        9\n",
+      "Key sucess:             0.1\n",
+      "\n",
+      "\n",
+      "Chave gerada:           [0, 1, 1, 1, 1, 1, 0, 1, 0, 1]\n",
+      "Chave recebida:         [None, None, None, 0, None, None, 1, 0, 0, 1]\n",
+      "Qubits interferidos:    {0, 1, 3, 4, 6, 7, 8, 9}\n",
+      "Chave final:            [0, 1]\n",
+      "Bits diferentes:        8\n",
+      "Key sucess:             0.2\n",
+      "\n",
+      "\n",
+      "Chave gerada:           [0, 1, 1, 1, 0, 1, 1, 1, 1, 0]\n",
+      "Chave recebida:         [1, None, None, 0, None, None, 1, 1, None, 1]\n",
+      "Qubits interferidos:    {0, 1, 2, 3, 4, 5, 6, 7, 8, 9}\n",
+      "Chave final:            [1, 1]\n",
+      "Bits diferentes:        8\n",
+      "Key sucess:             0.2\n",
+      "\n"
      ]
     }
    ],
@@ -124,17 +154,20 @@
     "    bob_received_qubits, interference_qubits = rede.send_qubits(route, qubits)\n",
     "        \n",
     "    # Bob mede os qubits\n",
-    "    measured_qubits = apply_measurement_b92(bob_received_qubits, bases_bob)\n",
+    "    key_bob = apply_measurement_b92(bob_received_qubits, bases_bob)\n",
     "    \n",
     "    # Qubits sem interferência\n",
-    "    shared_key = check_key(measured_qubits, interference_qubits)\n",
+    "    shared_key = check_key(key_bob, key_alice)\n",
     "\n",
     "    # Print the results\n",
     "    results = f\"\"\"\n",
-    "Key gerada:       {key_alice}\n",
-    "Shared Key:       {shared_key}\n",
-    "Bits diferentes:  {len(key_alice) - len(measured_qubits)}\n",
-    "Key sucess:       {len(shared_key) / key_size}\"\"\"\n",
+    "Chave gerada:           {key_alice}\n",
+    "Chave recebida:         {key_bob}\n",
+    "Qubits interferidos:    {interference_qubits}\n",
+    "Chave final:            {shared_key}\n",
+    "Bits diferentes:        {len(key_alice) - len(shared_key)}\n",
+    "Key sucess:             {len(shared_key) / key_size}\n",
+    "\"\"\"\n",
     "    \n",
     "    print(results)"
    ]
