Update Allocate Routes

--- a/Simulação Topologia Treliça.ipynb
+++ b/Simulação Topologia Treliça.ipynb
@@ -79,6 +79,7 @@
     "# Médias de sucesso de bits das chaves\n",
     "medias_sucesso_chaves_geral = dict()\n",
     "\n",
+    "\n",
     "# Vazão da rede\n",
     "vazao = []\n",
     "media_vazao = []"
@@ -99,7 +100,7 @@
     "    rede.set_lattice_topology(3, 4)\n",
     "        \n",
     "    requests = generate_qkd_request(rede, n_requests)\n",
-    "    resultados_simulacao = controlador.send_requests(requests)\n",
+    "    resultados_simulacao = controlador.send_requests(requests, 'shortest')\n",
     "    \n",
     "    for indice_execucao in resultados_simulacao:\n",
     "        # Percorre cada execução e colhe o sucesso nas chaves\n",
@@ -181,13 +182,6 @@
    "source": [
     "print(np.std(taxas_sucesso_chaves_geral))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
